Closed
Bug 799191
Opened 11 years ago
Closed 11 years ago
crash in mozilla::MediaDevice::MediaDevice when clicking the "video" button on anant's gum test page
Categories
(Core :: WebRTC: Audio/Video, defect)
Tracking
()
VERIFIED
FIXED
mozilla19
People
(Reporter: jsmith, Assigned: jesup)
References
()
Details
(Keywords: crash, Whiteboard: [getUserMedia] [blocking-gum+])
Crash Data
Attachments
(1 file)
1.08 KB,
patch
|
derf
:
review+
bajaj
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is report bp-5293ec1f-25b8-4d00-9da3-c15972121008 . ============================================================= Dao just got this crash upon testing bug 729522. He's hitting a crash immediately upon selecting "video" in anant's gum test page. 0 xul.dll nsRefPtr<nsCSSKeyframeStyleDeclaration>::assign_with_AddRef obj-firefox/dist/include/mozilla/StaticPtr.h:138 1 xul.dll mozilla::MediaDevice::MediaDevice dom/media/MediaManager.h:133 2 xul.dll mozilla::GetUserMediaDevicesRunnable::Run dom/media/MediaManager.cpp:566 3 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:612 4 xul.dll nsThread::ThreadFunc xpcom/threads/nsThread.cpp:256 5 nspr4.dll _PR_NativeRunThread nsprpub/pr/src/threads/combined/pruthr.c:395 6 nspr4.dll pr_root nsprpub/pr/src/md/windows/w95thred.c:90 7 msvcr100.dll _callthreadstartex f:\dd\vctools\crt_bld\self_x86\crt\src\threadex.c:314 8 msvcr100.dll _threadstartex f:\dd\vctools\crt_bld\self_x86\crt\src\threadex.c:292 9 kernel32.dll BaseThreadInitThunk 10 ntdll.dll __RtlUserThreadStart 11 ntdll.dll _RtlUserThreadStart
Updated•11 years ago
|
Crash Signature: [@ nsRefPtr<nsCSSKeyframeStyleDeclaration>::assign_with_AddRef(nsCSSKeyframeStyleDeclaration*) | mozilla::MediaDevice::MediaDevice(mozilla::MediaEngineAudioSource*)] → [@ mozilla::MediaDevice::MediaDevice(mozilla::MediaEngineAudioSource*)]
[@ nsRefPtr<nsCSSKeyframeStyleDeclaration>::assign_with_AddRef(nsCSSKeyframeStyleDeclaration*) | mozilla::MediaDevice::MediaDevice(mozilla::MediaEngineAudioSource*)]
[@ nsRefPtr<IDW…
Summary: crash in nsRefPtr when clicking the "video" button on anant's gum test page → crash in mozilla::MediaDevice::MediaDevice when clicking the "video" button on anant's gum test page
Comment 1•11 years ago
|
||
(In reply to Jason Smith [:jsmith] from comment #0) > immediately upon selecting "video" in anant's gum test page. Mind telling us where we can find this page?
Reporter | ||
Comment 2•11 years ago
|
||
(In reply to Henrik Skupin (:whimboo) from comment #1) > (In reply to Jason Smith [:jsmith] from comment #0) > > immediately upon selecting "video" in anant's gum test page. > > Mind telling us where we can find this page? https://people.mozilla.com/~anarayanan/gum_test.html
Updated•11 years ago
|
Assignee | ||
Updated•11 years ago
|
Whiteboard: [blocking-gum+]
Reporter | ||
Comment 3•11 years ago
|
||
I was also able to reproduce this crash, although not consistently.
Component: WebRTC → WebRTC: Audio/Video
Assignee | ||
Comment 4•11 years ago
|
||
This is the bug: audioCount = videoSources.Length(); :-)
Assignee | ||
Comment 5•11 years ago
|
||
Assignee | ||
Updated•11 years ago
|
Attachment #669568 -
Flags: review?(tterribe)
Comment 6•11 years ago
|
||
Comment on attachment 669568 [details] [diff] [review] incorrect audioCount in GetUserMediaDevicesRunnable Review of attachment 669568 [details] [diff] [review]: ----------------------------------------------------------------- r=me
Attachment #669568 -
Flags: review?(tterribe) → review+
Assignee | ||
Comment 7•11 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/1e021104715a
Assignee | ||
Comment 8•11 years ago
|
||
We should uplift this to Aurora ASAP
Reporter | ||
Updated•11 years ago
|
Whiteboard: [blocking-gum+] → [getUserMedia] [blocking-gum+]
Reporter | ||
Updated•11 years ago
|
status-firefox18:
--- → affected
Comment 9•11 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/1e021104715a
Assignee: nobody → rjesup
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Reporter | ||
Comment 10•11 years ago
|
||
Verified on Nightly 10/12.
Status: RESOLVED → VERIFIED
Keywords: verifyme
Assignee | ||
Comment 11•11 years ago
|
||
Comment on attachment 669568 [details] [diff] [review] incorrect audioCount in GetUserMediaDevicesRunnable [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 752352 User impact if declined: Frequent crashes using mozGetUserMedia Testing completed (on m-c, etc.): yes, by jsmith Risk to taking this patch (and alternatives if risky): No risk String or UUID changes made by this patch: None
Attachment #669568 -
Flags: approval-mozilla-aurora?
Updated•11 years ago
|
Attachment #669568 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 12•11 years ago
|
||
Pushed to Aurora: http://hg.mozilla.org/releases/mozilla-aurora/rev/bee211decb2d
Assignee | ||
Comment 13•11 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/bee211decb2d
Assignee | ||
Updated•11 years ago
|
status-firefox19:
--- → fixed
Comment 14•11 years ago
|
||
Not sure if we can get a crashtest here. Dao, was you ever able to reproduce it? I don't see a crash with an Aurora build from Friday before the patch landed.
Flags: in-testsuite?
Reporter | ||
Updated•11 years ago
|
Reporter | ||
Comment 15•11 years ago
|
||
Minusing for testsuite - What could possibly be covered by automation will be covered in bug 781534.
Flags: in-testsuite? → in-testsuite-
You need to log in
before you can comment on or make changes to this bug.
Description
•