Bug 799191: incorrect audioCount in GetUserMediaDevicesRunnable r=derf